# StreamDock-Device-SDK

./: .gitignore  LLM-linux-instructions.md  README.md  README_CN.md
CPP-SDK/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README_CN.md  build.sh  cpp.hint
CPP-SDK/ImgProcesser/: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
CPP-SDK/ImgProcesser/cmake/: ExtractHelpers.cmake  Fetch_OpenCV.cmake  Fetch_giflib.cmake
CPP-SDK/ImgProcesser/src/Gif2ImgFrame/: Gif2ImgFrame.cpp  Gif2ImgFrame.h  IImageEncoder.h  ImgType.h  RawCanvas.h  ThreadPool.h
CPP-SDK/ImgProcesser/src/ImgHelper/: ImgHelper.h
CPP-SDK/ImgProcesser/src/OpenCVImageEncoder/: OpenCVImageEncoder.cpp  OpenCVImageEncoder.h  OpenCVSupportFormat.h
CPP-SDK/StreamDock_CppSDK/include/: ProductIDs.h  StreamDock293sV3.h  StreamDockM18.h
CPP-SDK/StreamDock_CppSDK/src/: DeviceManager.cpp  StreamDock293sV3.cpp  StreamDockM18.cpp
CPP-SDK/cmake/: FetchHid.cmake
CPP-SDK/src/: logger.h  main.cpp  test.h
CPP-SDK/src/DeviceInfo/: featureoption.h  streamdock.cpp  streamdock.h  streamdockconfigcmd.h  streamdockfactory.cpp  streamdockfactory.h  streamdockinfo.h
CPP-SDK/src/DeviceInfo/Feature/Configer/: configer.cpp  configer.h  iconfiger.h  nullconfiger.h
CPP-SDK/src/DeviceInfo/Feature/GifController/: gifcontroller.cpp  gifcontroller.h  igifcontroller.h  nullgifcontroller.h
CPP-SDK/src/DeviceInfo/Feature/HeartBeat/: heartbeat.cpp  heartbeat.h  iheartbeat.h  nullheartbeat.h
CPP-SDK/src/DeviceInfo/Feature/RGBController/: irgbcontroller.h  nullrgbcontroller.h  rgbcontroller.cpp  rgbcontroller.h
CPP-SDK/src/DeviceInfo/Feature/ReadController/: ireadcontroller.h  nullreadcontroller.h  readcontroller.cpp  readcontroller.h
CPP-SDK/src/DeviceManager/: devicemanager.cpp  devicemanager.h  devicemanager_linux.cpp  devicemanager_mac.cpp  devicemanager_win.cpp
CPP-SDK/src/DeviceManager/DeviceEnumerator/: deviceenumerator.cpp  deviceenumerator.h
CPP-SDK/src/HotspotDevice/K1Pro/: K1Pro.cpp  K1Pro.h
CPP-SDK/src/HotspotDevice/StreamDock293V2/: streamdock293V2.cpp  streamdock293V2.h
CPP-SDK/src/HotspotDevice/StreamDock293V3/: streamdock293V3.cpp  streamdock293V3.h
CPP-SDK/src/HotspotDevice/StreamDock293sV2/: streamdock293sV2.cpp  streamdock293sV2.h
CPP-SDK/src/HotspotDevice/StreamDock293sV3/: streamdock293sV3.cpp  streamdock293sV3.h
CPP-SDK/src/HotspotDevice/StreamDockM18/: streamdockM18.cpp  streamdockM18.h
CPP-SDK/src/HotspotDevice/StreamDockM18V2/: streamdockM18V2.h
CPP-SDK/src/HotspotDevice/StreamDockM18V25/: streamdockM18V25.h
CPP-SDK/src/HotspotDevice/StreamDockM18V3/: streamdockM18V3.h
CPP-SDK/src/HotspotDevice/StreamDockM3/: streamdockM3.cpp  streamdockM3.h
CPP-SDK/src/HotspotDevice/StreamDockMini/: streamdockMini.cpp  streamdockMini.h
CPP-SDK/src/HotspotDevice/StreamDockN1/: streamdockN1.cpp  streamdockN1.h
CPP-SDK/src/HotspotDevice/StreamDockN3V2/: streamdockN3V2.cpp  streamdockN3V2.h
CPP-SDK/src/HotspotDevice/StreamDockN3V25/: streamdockN3V25.cpp  streamdockN3V25.h
CPP-SDK/src/HotspotDevice/StreamDockN3V3/: streamdockN3V3.h
CPP-SDK/src/HotspotDevice/StreamDockN4/: streamdockN4.cpp  streamdockN4.h
CPP-SDK/src/HotspotDevice/StreamDockN4Pro/: streamdockN4Pro.cpp  streamdockN4Pro.h
CPP-SDK/src/HotspotDevice/StreamDockXL/: streamdockXL.cpp  streamdockXL.h
CPP-SDK/src/ToolKit/: toolkit.h
CPP-SDK/src/Transport/: CMakeLists.txt  TransportCWrapper.cpp  TransportCWrapper.h
CPP-SDK/src/Transport/TransportDLL/: CMakeLists.txt  libtransport.dylib  libtransport_arm64.dylib  transport.exp  transport.lib  transport_c.h  transportd.exp  transportd.lib
Python-Linux-SDK/: .gitignore  README.md  README_CN.md
Python-Linux-SDK/src/: main.py
Python-Linux-SDK/src/StreamDock/: ProductIDs.py
Python-Linux-SDK/src/StreamDock/Devices/: StreamDockN1.py  StreamDockN4Pro.py
Python-Mac_ARM64-SDK/: .gitignore  Instructions for use.txt  README.md  README_CN.md
Python-Mac_ARM64-SDK/src/: main.py
Python-Mac_ARM64-SDK/src/StreamDock/: DeviceManager.py  ProductIDs.py
Python-Mac_ARM64-SDK/src/StreamDock/Devices/: StreamDock293.py  StreamDockM18.py  StreamDockM3.py  StreamDockN4Pro.py  StreamDockXL.py
Python-Mac_ARM64-SDK/src/StreamDock/Transport/: LibUSBHIDAPI.py
Python-SDK/: .gitignore  README.md  README_CN.md  pyproject.toml  requirements.txt
Python-SDK/src/: k1pro_linux.py  main.py
Python-SDK/src/StreamDock/: DeviceManager.py  FeatrueOption.py  InputTypes.py  ProductIDs.py
Python-SDK/src/StreamDock/Devices/: GifController.py  K1Pro.py  StreamDock.py  StreamDock293.py  StreamDock293V3.py  StreamDock293s.py  StreamDock293sV3.py  StreamDockM18.py  StreamDockM3.py  StreamDockMini.py  StreamDockN1.py  StreamDockN3.py  StreamDockN4.py  StreamDockN4Pro.py  StreamDockXL.py
Python-SDK/src/StreamDock/Transport/: LibUSBHIDAPI.py  test.py
Python-SDK/src/StreamDock/Transport/TransportDLL/: libtransport.dylib  libtransport_arm64.dylib  transport.lib
Python-SDK/src/handlers/: key_handlers.py  knob_handlers.py
WebSocket-SDK/: 99-streamdock.rules  README.md  README_CN.md  test.js
WebSocket-Windows-SDK/: .gitignore  README.md  README_CN.md  Test Websocket Command.js  test.js  websocket_sdk_test.py
docs/: readme.de.md  readme.en.md  readme.es.md  readme.ja.md  readme.pt-br.md  readme.zh-cn.md
src/: main.py
src/StreamDock/: DeviceManager.py  ProductIDs.py
src/StreamDock/Devices/: StreamDock.py  StreamDock293V3.py  StreamDock293s.py
src/StreamDock/Transport/: LibUSBHIDAPI.py  libtransport_mac_arm64.dylib
